--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -21,8 +21,8 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div ng-controller="MainCtrl" class="container">
-      <div class="navbar navbar-default">
+    <div class="container">
+      <div ng-controller="NavCtrl" class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -31,11 +31,14 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="text-muted navbar-brand" ng-click="sortCategory('')" href="#/">Xbox Game Voting</a>
+            <a class="text-muted navbar-brand" ng-click="sortCategory('home')" href="#/">Xbox Game Voting</a>
           </div>
           <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a ng-href="#">Add Game</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li ng-class="{'active': isActive('want')}"><a ng-href="#/wantedGames">Wanted Games</a></li>
+              <li ng-click="sortCategory('want')" ng-class="{'active': isActive('want')}" ><a ng-href="#/wantedGames">Wanted Games</a></li>
               <li ng-click="sortCategory('got')" ng-class="{'active': isActive('got')}"><a ng-href="#/ownedGames">Owned Games</a></li>
               <li ng-click="sortCategory('contact')" ng-class="{'active': isActive('contact')}"><a ng-href="#/contact">Contact</a></li>
             </ul>
@@ -91,6 +94,8 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="modules/common/ApiModule.js"></script>
+        <script src="modules/common/ServicesModule.js"></script>
         <script src="scripts/config/constants.js"></script>
         <script src="modules/common/api/services/GetGamesService.js"></script>
         <script src="modules/common/api/services/AddGameService.js"></script>
@@ -100,8 +105,6 @@
         <script src="modules/main/mainController.js"></script>
         <script src="modules/ownedGames/ownedGamesController.js"></script>
         <script src="modules/wantedGames/wantedGamesController.js"></script>
-        <script src="modules/common/ApiModule.js"></script>
-        <script src="modules/common/ServicesModule.js"></script>
         <!-- endbuild -->
 </body>
 </html>
