--- a/app/index.html
+++ b/app/index.html
@@ -25,17 +25,19 @@
       <div ng-controller="NavCtrl" class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <button type="button" ng-click="collapse(!navCollapsed)" class="navbar-toggle btn btn-navbar">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="text-muted navbar-brand" ng-click="sortCategory('home')" href="#/">Xbox Game Voting</a>
+            <a class="text-muted navbar-brand" ng-click="navCollapsed = !navCollapsed" href="#/">Xbox Game Voting</a>
           </div>
-          <div class="navbar-collapse collapse">
+          <div collapse="navCollapsed">
             <ul class="nav navbar-nav">
-              <li><a ng-href="#">Add Game</a></li>
+              <li><a ng-click="open()" href="javascript:void(0)">
+                  Add Game
+              </a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li ng-click="sortCategory('want')" ng-class="{'active': isActive('want')}" ><a ng-href="#/wantedGames">Wanted Games</a></li>
@@ -89,6 +91,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
