Fixed web.js issue with built app

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="text-muted navbar-brand" ng-click="sortCategory('home')" href="#/">Xbox Game Voting</a>
+            <a class="text-muted navbar-brand" ng-click="sortCategory('want')" href="#/">Xbox Game Voting</a>
           </div>
           <div collapse="collapsed">
             <ul class="nav navbar-nav navbar-right">
