NERD006, started alert modal work

--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,7 @@
         <script src="modules/common/services/api/AddVoteService.js"></script>
         <script src="modules/common/services/api/SetGotItService.js"></script>
         <script src="modules/common/directives/modal/modalDirective.js"></script>
+        <script src="modules/common/directives/alertModal/alertModalDirective.js"></script>
         <script src="modules/common/services/storage/StorageService.js"></script>
         <script src="modules/main/mainController.js"></script>
         <script src="modules/ownedGames/ownedGamesController.js"></script>
